Fix masthead layout by adding overflow: hidden to contain floats

--- a/style.scss
+++ b/style.scss
@@ -160,6 +160,7 @@ img {
 .masthead {
   padding: 20px 0;
   border-bottom: 1px solid $darkGray;
+  overflow: hidden;
 
   @include mobile {
     text-align: center;
